# ensync_simple

./: .gitignore  README.md  pyproject.toml
src/ensync/simple/: browser.py  browserwindow.py  downloadmanagerwidget.py  downloadwidget.py  main.py  tabwidget.py  ui_certificateerrordialog.py  ui_downloadmanagerwidget.py  ui_downloadwidget.py  ui_passworddialog.py  util.py  webpage.py  webpopupwindow.py  webview.py
src/ensync/simple/data/: rc_simplebrowser.py
